--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,23 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false,
     "baseUrl": ".",
-    "jsx": "preserve",
-    "lib": [
-      "DOM"
-    ],
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react",
+    "jsxFactory": "preact.h",
+    "lib": ["DOM"],
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noUnusedLocals": true,
+    "outDir": "public",
     "strict": true,
     "target": "esnext",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true
+    "paths": {
+      "/web_modules/*.js": ["node_modules/@types/*", "node_modules/*", "public/web_modules/*"]
+    }
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
