--- a/codegen.yml
+++ b/codegen.yml
@@ -1,11 +1,11 @@
 overwrite: true
-schema: 'http://localhost:4000'
-documents: graphql/*.graphql
+schema: 'http://api.aniarchive.org'
+documents: src/graphql/*.graphql
 config:
   avoidOptionals: false # generate optionals
   maybeValue: T # use optionals to determine nullability, not Maybe
 generates:
-  types/graphql.ts:
+  src/types/graphql.ts:
     plugins:
       - 'typescript'
       - 'typescript-operations'
