--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: 'http://api.aniarchive.org'
+schema: 'https://api.aniarchive.org'
 documents: src/graphql/*.graphql
 config:
   avoidOptionals: false # generate optionals
