Add studios & animationSequences

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "build:css": "postcss src/styles.css -o public/app.min.css",
     "build:css:watch": "postcss -w src/styles.css -o public/app.min.css",
     "build:gql": "node scripts/graphql",
-    "build:watch": "concurrently 'tsc -w' 'npm run build:copy --watch' 'npm run build:css:watch'",
+    "build:watch": "npm run build && concurrently 'tsc -w' 'npm run build:copy --watch' 'npm run build:css:watch'",
     "dev": "concurrently 'npm run build:watch' 'npm start'",
     "generate:gql": "graphql-codegen --config codegen.yml",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:css": "stylelint 'client/**/*.ts'",
+    "lint:js": "eslint --ext .js,.jsx,.ts,.tsx src",
     "postinstall": "NODE_ENV=production snowpack --dest public/web_modules --optimize --clean",
-    "start": "serve -s public"
+    "start": "serve -s public",
+    "typecheck": "tsc --noEmit"
   },
   "snowpack": {
     "dedupe": [],
@@ -30,30 +33,34 @@
     "postcss-cli": "^7.1.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "preact": "^10.2.1",
+    "preact": "^10.3.1",
     "preact-router": "^3.2.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.12.1",
-    "@graphql-codegen/typescript": "^1.12.1",
-    "@graphql-codegen/typescript-operations": "^1.12.1",
-    "@types/node": "^13.7.0",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
+    "@graphql-codegen/cli": "^1.12.2",
+    "@graphql-codegen/typescript": "^1.12.2",
+    "@graphql-codegen/typescript-operations": "^1.12.2",
+    "@types/node": "^13.7.1",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "concurrently": "^5.1.0",
     "cpx": "^1.5.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "gqlmin": "0.0.1",
     "prettier": "^1.19.1",
     "serve": "^11.3.0",
-    "snowpack": "^1.1.2",
+    "snowpack": "^1.3.1",
+    "stylelint": "^13.2.0",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^4.0.0",
     "typescript": "^3.7.5"
   }
 }
