--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "routes": [
+    { "src": "/about.*", "dest": "/index.html" },
     { "src": "/film.*", "dest": "/index.html" },
-    { "src": "/studio.*", "dest": "/index.html" },
-    { "src": "/person.*", "dest": "/index.html" }
+    { "src": "/person.*", "dest": "/index.html" },
+    { "src": "/studio.*", "dest": "/index.html" }
   ]
 }
