--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "vue": "^3.0.0-beta.14",
-    "vue-router": "^4.0.0-alpha.11"
+    "vue-router": "^4.0.0-alpha.12"
   },
   "devDependencies": {
     "@snowpack/app-scripts-vue": "^0.6.1",
     "concurrently": "^5.2.0",
     "prettier": "^2.0.5",
     "sass": "^1.26.5",
-    "snowpack": "^2.0.0-rc.1",
+    "snowpack": "^2.4.0",
     "stylelint": "^13.4.1",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-rational-order": "^0.1.2",
